--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,8 @@ keycloak.credentials.secret=1KWU5t4NhXNhtBQthcibXjfYQA9pvqQq
 keycloak.use-resource-role-mappings=true
 keycloak.bearer-only=true
 spring.main.allow-circular-references=true
+
+master.user=admin
+master.user.password=admin
+master.realm=master
+master.client=master-client
