finished keycloak services for automation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.defer-datasource-initialization=true
 
 #Below is needed for keycloak
 
-keycloak.realm=Bayarea-dev
+keycloak.realm=bayarea-dev
 keycloak.auth-server-url=http://localhost:8080/auth
 keycloak.ssl-required=external
 keycloak.resource=ticketing-app
